--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^17.0.11",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
@@ -16,6 +16,7 @@
     "react-fast-marquee": "^1.3.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "cypress": "^13.10.0",
+    "eslint-plugin-cypress": "^3.2.0",
+    "fetch-mock": "^9.11.0",
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
